--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.32.1",
+    "react-table": "^7.7.0",
     "reactstrap": "^9.0.0"
   },
   "devDependencies": {
